# pinocchio_tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calc_jacobian.py  display_model.py  inverse_dynamics.py  inverse_kinematics.py  modeling_robot_configuration.py  package.xml  robot_wrapper.py  setup.py
scripts/samples/: calc_jacobian.py  display_model.py  inverse_dynamics.py  inverse_kinematics.py  modeling_robot_configuration.py
src/pinocchio_tools/: robot_wrapper.py
